# HYUNDAI_AUTOEVER_Mobility_SW_School-2nd_Project

./: README.md
Raspi/vsomeip/: CMakeLists.txt  mcast_to_bcast.py  readme.md  rpi_client_app.cpp  vsomeip.json
References/: SOMEIP-SD_Example.pcap
TC375/: Cpu0_Init.c  Cpu0_Init.h  Cpu0_Main.c  ccu.c  ccu.h
TC375/BSW/Controller/: emer_alert.c  emer_alert.h  emer_alert_types.h  motor_controller.c  motor_controller.h  motor_controller_types.h
TC375/BSW/Driver/: GPIO.c  GPIO.h  asclin.c  asclin.h  eru.c  eru.h  evadc.c  evadc.h  geth_lwip.c  gpt12.c  gpt12.h  gtm_atom_pwm.c  gtm_atom_pwm.h  isr_priority.h  stm.c  stm.h
TC375/BSW/IO/: Bluetooth.c  Bluetooth.h  Buzzer.c  Buzzer.h  LED.c  LED.h  Motor.c  Motor.h  PR.c  PR.h  ToF.c  ToF.h  Ultrasonic.c  Ultrasonic.h  bluetooth_types.h  my_stdio.c  my_stdio.h  pr_types.h  tof_types.h  ultrasonic_types.h
TC375/Common/: output_status.h
TC375/Configurations/: Configuration.h  lwipopts.h
TC375/Libraries/Ethernet/lwip/port/src/: Ifx_Lwip.c
TC375/Libraries/Utils/: my_math.h
TC375/Libraries/Utils/Filter/: avg_filter.c  avg_filter.h
TC375/Libraries/Utils/Map/: ii_map.c  ii_map.h
TC375/Libraries/Utils/Queue/: eru_event_queue.h
TC375/SOMEIP/: make_packet.c  make_packet.h  make_payload.c  make_payload.h  note.c  serialize_data.c  serialize_data.h  someip.c  someip.h  someip_cfg.h  someipsd.c  someipsd.h  someipsd_util.c  someipsd_util.h
TC375/SOMEIP/References/: someipsd_참고코드.c
TC375/Utils/: my_ctype.h
TC375/Utils/Queue/: byte_queue.c  byte_queue.h  eru_event_queue.c
(+1 files in other folders)
